After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 662145 - Signal GeditDocument:save is missing a parameter
Signal GeditDocument:save is missing a parameter
Status: RESOLVED FIXED
Product: gedit
Classification: Applications
Component: general
unspecified
Other Linux
: Normal normal
: ---
Assigned To: Gedit maintainers
Gedit maintainers
Depends on:
Blocks:
 
 
Reported: 2011-10-18 21:37 UTC by Luca Bruno
Modified: 2011-11-27 12:50 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
GeditDocument::load signal: add missing column_pos parameter (1.11 KB, patch)
2011-10-18 21:37 UTC, Luca Bruno
none Details | Review

Description Luca Bruno 2011-10-18 21:37:08 UTC
Created attachment 199370 [details] [review]
GeditDocument::load signal: add missing column_pos parameter

Hello,
the signal "save" of GeditDocument is missing the column_pos argument.
The attached patch is untested (couldn't compile due to gtk 3.1 dependency), sorry for that.
Comment 1 Paolo Borelli 2011-11-27 12:50:08 UTC
Ops, I forgot to push this. Thanks for the patch and sorry for the delay