Add missing column_pos parameter to the GeditDocument::load signal

https://bugzilla.gnome.org/show_bug.cgi?id=662145